--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>nixie clock</title>
+<title>homepage_czt</title>
 <style type="text/css">
     html,body {
         width: 100%;
@@ -209,6 +209,7 @@
 </head>
 
 <body>
+        <h1>CZT_HOMEPAGE</h1>
        <div id = "sg1"  class = "clock">
          <img src="10.png"  />
          <img src="10.png" />
