--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>美女不生气了好不好</title>
+<title>纪念曾相遇的时间，我贫瘠人生中的难得一抹亮色</title>
 
 <style type="text/css">
 @font-face {
