--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					亲爱的，这是我们在一起的美好时光。
+					亲爱的，这是我们在相遇的时候。
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					喜欢你、爱你直到永永远远。<br/>
+					喜欢你、纪念你直到永永远远。<br/>
 					<div class="signature">- 喜欢你的<a id="signature-name"></a></div>
 				</div>
 			</div>
